--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,18 @@ dependencies:
   intl: ^0.19.0
   fluttertoast: ^8.2.6
   flutter_svg: ^2.0.10+1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/app_icon.png"
 
 flutter:
   uses-material-design: true
